<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormularioActivity">

    <EditText
        android:id="@+id/eNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nombre"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/ePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/eRepPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RepPassword"
        android:inputType="textPassword"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/eCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:textSize="15dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rMasculino"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Masculino" />

        <RadioButton
            android:id="@+id/rFemenino"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Femenino" />
    </RadioGroup>

    <Spinner
        android:id="@+id/sCiudades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/eFechadeNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date" />
    <Button
        android:id="@+id/botonFechadeNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:onClick="mostrarCalendario"
        android:text="@string/Fechadenacimiento" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Hobbis"
        android:id="@+id/hobbis"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cocinar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/Cocinar" />

            <CheckBox
                android:id="@+id/bailar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/Bailar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/HacerDeporte"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/HacerDeporte" />

            <CheckBox
                android:id="@+id/EscucharMúsica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/EscucharMúsica" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="guardarClicked"
        android:text="@string/Guardar" />

    <TextView
        android:id="@+id/tResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Resultado"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />


</LinearLayout>